--- a/Code-Examples/TypeScript/Other-Lessons/package.json
+++ b/Code-Examples/TypeScript/Other-Lessons/package.json
@@ -1,9 +1,15 @@
 {
   "name": "typescript-examples",
   "version": "1.0.0",
+  "scripts": {
+    "build": "tsc",
+    "dev": "concurrently -k -n COMPILER,NODEMON -c gray,blue \"tsc -w\" \"nodemon -w ./dist -q dist/index.js\""
+  },
   "devDependencies": {
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.0.11",
+    "concurrently": "^5.0.0",
+    "nodemon": "^2.0.1",
     "typescript": "^3.5.1"
   },
   "dependencies": {
