--- a/Code-Examples/TypeScript/Other-Lessons/tsconfig.json
+++ b/Code-Examples/TypeScript/Other-Lessons/tsconfig.json
@@ -6,7 +6,8 @@
     "jsx": "react",
     "strictNullChecks": true,
     "module": "commonjs",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "skipLibCheck": true
   },
   "include": ["src/**/*"]
 }
