--- a/Code-Examples/React-With-TypeScript/package.json
+++ b/Code-Examples/React-With-TypeScript/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "start": "next start"
   },
+  "license": "ISC",
   "dependencies": {
     "next": "^7.0.2",
     "react": "^16.7.0",
@@ -18,6 +19,6 @@
     "@types/react": "^16.7.18",
     "@types/react-redux": "^7.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "typescript": "^3.3.3"
+    "typescript": "^3.7.2"
   }
 }
