--- a/Code-Examples/TypeScript/Other-Lessons/package.json
+++ b/Code-Examples/TypeScript/Other-Lessons/package.json
@@ -5,12 +5,13 @@
     "build": "tsc",
     "dev": "concurrently -k -n COMPILER,NODEMON -c gray,blue \"tsc -w\" \"nodemon -w ./dist -q dist/index.js\""
   },
+  "license": "ISC",
   "devDependencies": {
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.0.11",
     "concurrently": "^5.0.0",
     "nodemon": "^2.0.1",
-    "typescript": "^3.5.1"
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "apollo-client": "^2.4.12",
